# control-net

./: .gitignore  README.md
backend/: .env_sample  README.md  fastapi_main.py  pyproject.toml
backend/backend_app/: fastapi_main.py  main.py
backend/backend_app/api/: metric_fid.py  metric_fsnr.py  metric_psnr.py  metric_ssim.py  pixabay_utils.py  router.py  utils_pixabay.py  utils_preprocessing.py  utils_process.py
backend/backend_app/api/endpoints/: evaluation_model.py  get_image.py  start_game.py
backend/backend_app/core/: config.py
backend/backend_app/schemas/: __init__.py  input_data.py
control_net_model/: README.md  pyproject.toml
frontend/: README.md
frontend/control_net/: package.json
frontend/control_net/src/: App.css  App.js  Game.css  Game.js  api.js
frontend/control_net/src/components/: AdvancedOptions.js  ImageProcessor.js  ImageUpload.js  PromptInput.js  ReportPage.js  Results.js
