[tool.poetry]
name = "backend_app"
version = "0.0.1"
description = ""
authors = ["hyeon <selwha1@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
pydantic-settings = "^2.4.0"
aiohttp = "^3.10.1"

[tool.poetry.scripts]
start_server = 'backend_app.main:start'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
