[tool.poetry]
name = "backend_app"
version = "0.0.1"
description = ""
authors = ["hyeon <selwha1@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
pydantic-settings = "^2.4.0"
aiohttp = "^3.10.1"
numpy = "^2.0.1"
opencv-python = "^4.10.0.84"

[tool.poetry.scripts]
start_server = 'backend_app.main:start'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
